# SPDX-FileCopyrightText: 2022, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0


[package]
edition = "2021"
name = "ctsrunner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.19.0", features = ["persistence"]}
egui = "0.19.0"
serde = {version = "1.0", features = ["derive"]}
subprocess = "0.2.9"
